# kazuki

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/game/: Cargo.toml  package.json
apps/game/.cargo/: config.toml
apps/game/assets/shaders/: custom.frag  toon.frag
apps/game/examples/: joints.rs
apps/game/examples/src/: joints.rs  mod.rs
apps/game/src/: game.rs  lib.rs  main.rs
apps/game/src/car/: mod.rs
apps/game/src/car/dynamics/: mod.rs  suspension.rs
apps/game/src/car/objects/: mod.rs  wheels.rs
apps/game/src/plugins/: car.rs  controls.rs  cubes.rs  main_scene.rs  mod.rs  physics.rs
apps/game/src/services/: assets.rs  game.rs
apps/three-d/: Cargo.toml  package.json
apps/three-d/src/: lib.rs
apps/three-d/src/services/: game.rs  mod.rs
apps/webapp/: index.html  package.json  vite.config.ts
apps/webapp/public/: assets
apps/webapp/src/: App.svelte  app.css
src/: main.rs
