[package]
name = "kazuki"
version = "0.1.0"
authors = ["Martin Schaer <martin@schaerweb.com>"]
edition = "2021"

# remove dynamic_linking for release
[dependencies]
bevy = "0.10.1"
# bevy = { version = "0.10.1", features = ["dynamic_linking"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
