[package]
name = "kazuki"
version = "0.1.0"
authors = ["Martin Schaer <martin@schaerweb.com>"]
edition = "2021"

# remove dynamic_linking for release
[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_flycam = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy_rapier3d = { version = "0.23.0", features = [ "simd-stable", "debug-render-3d" ] }
leafwing-input-manager = "0.11.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
