[package]
name = "kazuki"
version = "0.1.0"
authors = ["Martin Schaer <martin@schaerweb.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[target.'cfg(target_arch = "wasm32")'.features]
default = ["console_log"]

[dependencies]
three-d = { version = "0.15.0", features=["egui-gui"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version="1.16", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"

# tiny allocator for wasm instead of the default (1K < 10K), but slower
wee_alloc = { version = "0.4.5", optional = true }

# Better debugging of panics with console.error. Good for development, but big for production
console_error_panic_hook = { version = "0.1.6", optional = true }

wasm-bindgen-futures = "0.4"
log = "0.4"
console_log = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size
opt-level = "s"
